tests/baselines/reference/controlFlowIterationErrors.errors.txt
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(11,17): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(22,17): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(34,17): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
  Type 'string' is not assignable to type 'number'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(45,17): error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
  Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts (4 errors) ====
    let cond: boolean;
    
    function len(s: string) {
        return s.length;
    }
    
    function f1() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x = len(x);
                    ~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2345:   Type 'number' is not assignable to type 'string'.
            x;
        }
        x;
    }
    
    function f2() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x;
            x = len(x);
                    ~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'string'.
!!! error TS2345:   Type 'number' is not assignable to type 'string'.
        }
        x;
    }
    
    declare function foo(x: string): number;
    declare function foo(x: number): string;
    
    function g1() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x = foo(x);
                    ~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'string' is not assignable to type 'number'.
            x;
        }
        x;
    }
    
    function g2() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x;
            x = foo(x);
                    ~
!!! error TS2345: Argument of type 'string | number' is not assignable to parameter of type 'number'.
!!! error TS2345:   Type 'string' is not assignable to type 'number'.
        }
        x;
    }
    